# filter-pre-commit-hooks

./: .copier-answers.yaml  .copier-answers.yml  .env  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTE.md  DEVELOP.md  Justfile  LICENSE  MAINTAIN.md  README.md  RELEASE.md  Taskfile.yaml  mise.toml  pyproject.toml  renovate.json  renovate.json5
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yaml  codeql.yaml  dev-cont.yaml  release.yaml
.githubx/workflows/: ci.yaml
scripts/: check-with-pre-commit.bash  create-release-notes.bash  exec_cmds_defer_errors.py  filter_pre_commit_hooks.py  fix-with-pre-commit.bash  format-with-pre-commit.bash  lint-with-pre-commit.bash  run-pre-commit-checks.bash  run-pre-commit-fixes.bash  sync-script-metadata.bash  try-update-brew.bash  try-update-pipx.bash  update-pkgs-brew.bash  update-pkgs-uv.bash
src/: filter_pre_commit_hooks.py
src/filter_pre_commit_hooks/: filter_pre_commit_hooks.py
tests/: test_filter_pre_commit_hooks.py  test_integration.py  test_unit.py
tests/resources/: pre-commit-config.yaml
